--- a/styles.css
+++ b/styles.css
@@ -14,20 +14,32 @@
 
  ul li:nth-child(1){
 	background-color:white;
+	 font-size:22px;
+	 width:50%;
+	 padding:10px;
 }
 
  ul li:nth-child(5){
 	background-color:white;
+	 font-size:22px;
+	 width:50%;
+	 padding:10px;
 }
 
  ul li:nth-child(2){
     background-color: slategrey;
+	 width:50%;
+	 padding:10px;
 }
 
 ul li:nth-child(3){
 	background-color:pink;
+	width:50%;
+	padding:10px;
 }
 
  ul li:nth-child(4){
     background-color: slategrey;
+	 width:50%;
+	 padding:10px;
 }
