--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ ul li :nth-child(5),{
 }
 
  ul li:nth-child(2){
-    background-color: slategrey;
+    background-color:grey;
 }
 
 ul li:nth-child(3){
@@ -36,5 +36,5 @@ ul li:nth-child(3){
 }
 
  ul li:nth-child(4){
-    background-color: slategrey;
+    background-color:grey;
 }
