--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /*  your css code here. If applicable */
 :root{
-	background-color:rgb(135, 206, 235);
+	background-color:skyblue;
 }
 
  div :first-child{
@@ -11,14 +11,7 @@
  div :last-child{
 	color: red;
 }
-ul li{
-	width:50%;
-	padding:10px;
-}
-ul li :nth-child(1),
-ul li :nth-child(5),{
-	font-size:22px;
-}
+
  ul li:nth-child(1){
 	background-color:white;
 }
@@ -28,7 +21,7 @@ ul li :nth-child(5),{
 }
 
  ul li:nth-child(2){
-    background-color:grey;
+    background-color: slategrey;
 }
 
 ul li:nth-child(3){
@@ -36,5 +29,5 @@ ul li:nth-child(3){
 }
 
  ul li:nth-child(4){
-    background-color:grey;
+    background-color: slategrey;
 }
