--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ ul li:nth-child(5){
 }
 
  ul li:nth-child(2){
-    background-color: slategrey;
+    background-color:gray;
 }
 
 ul li:nth-child(3){
@@ -35,5 +35,5 @@ ul li:nth-child(3){
 }
 
  ul li:nth-child(4){
-    background-color: slategrey;
+    background-color:gray;
 }
