--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /*  your css code here. If applicable */
 :root{
-	background-color:skyblue;
+	background-color:rgb(135, 206, 235);
 }
 
  div :first-child{
