--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /*  your css code here. If applicable */
 :root{
-	background-color:rgb(135, 206, 235);
+	background-color:skyblue;
 }
 
  div :first-child{
@@ -10,12 +10,6 @@
 
  div :last-child{
 	color: red;
-}
-ul li:nth-child(1){
-	font-size:22px;
-}
-ul li:nth-child(5){
-	font-size:22px;
 }
 
  ul li:nth-child(1){
@@ -27,7 +21,7 @@ ul li:nth-child(5){
 }
 
  ul li:nth-child(2){
-    background-color:gray;
+    background-color: slategrey;
 }
 
 ul li:nth-child(3){
@@ -35,5 +29,5 @@ ul li:nth-child(3){
 }
 
  ul li:nth-child(4){
-    background-color:gray;
+    background-color: slategrey;
 }
