--- a/styles.css
+++ b/styles.css
@@ -1,33 +1,46 @@
-/*  your css code here. If applicable */
-:root{
-	background-color:skyblue;
+:root {
+    --bg-color: rgb(135, 206, 235);
 }
 
- div :first-child{
-	background-color:black;
-	color:white;
+body {
+    background-color: var(--bg-color);
+    font-family: Arial, sans-serif;
 }
 
- div :last-child{
-	color: red;
+article p:first-child {
+    color: white;
+    background-color: black;
 }
 
- ul li:nth-child(1){
-	background-color:white;
+article p:nth-child(2) {
+    color: inherit; /* Standard text color */
 }
 
- ul li:nth-child(5){
-	background-color:white;
+article p:last-child {
+    color: red;
 }
 
- ul li:nth-child(2){
-    background-color: slategrey;
+ul {
+    list-style-type: none;
+    padding: 0;
 }
 
-ul li:nth-child(3){
-	background-color:pink;
+ul li {
+    background-color: gray;
+    width: 50%;
+    padding: 10px;
+    margin: 5px 0;
 }
 
- ul li:nth-child(4){
-    background-color: slategrey;
+ul li:nth-child(odd) {
+    background-color: white;
+}
+
+ul li:first-child,
+ul li:last-child {
+    font-size: 22px;
+}
+
+ul li:nth-child(3) {
+    background-color: pink;
 }
